performance: improve tabular modification copies (#437)
Signed-off-by: Joris Mancini <joris.mancini_externe@rte-france.com>