@@ -55,10 +55,23 @@ public class NetworkModificationRepository {
 
     @Transactional // To have all create in the same transaction (atomic)
     // TODO Remove transaction when errors will no longer be sent to the front
+    // This method should be package-private and not used as API of the service as it uses ModificationEntity and
+    // we want to encapsulate the use of Entity related objects to this service.
+    // Nevertheless We have to keep it public for transactional annotation.
     public void saveModifications(UUID groupUuid, List<? extends ModificationEntity> modifications) {
+        saveModificationsNonTransactional(groupUuid, modifications);
+    }
+
+    @Transactional // To have all create in the same transaction (atomic)
+    // TODO Remove transaction when errors will no longer be sent to the front
+    public void saveModificationInfos(UUID groupUuid, List<? extends ModificationInfos> modifications) {
+        saveModificationsNonTransactional(groupUuid, modifications.stream().map(ModificationInfos::toEntity).toList());
+    }
+
+    private void saveModificationsNonTransactional(UUID groupUuid, List<? extends ModificationEntity> modifications) {
         var modificationGroupEntity = this.modificationGroupRepository
-                .findById(groupUuid)
-                .orElseGet(() -> modificationGroupRepository.save(new ModificationGroupEntity(groupUuid)));
+            .findById(groupUuid)
+            .orElseGet(() -> modificationGroupRepository.save(new ModificationGroupEntity(groupUuid)));
         modifications.forEach(m -> {
             modificationGroupEntity.addModification(m);
             // We need here to call the save() method on the modification entity cause the ids of the ModificationEntity's are used in further treatments in the same transaction.
@@ -133,7 +146,8 @@ public class NetworkModificationRepository {
         // findAllById does not keep sourceModificationUuids order, but
         // sourceEntities, copyEntities, newEntities have the same order.
         List<ModificationEntity> copyEntities = sourceEntities.stream()
-                .map(ModificationEntity::copy)
+                .map(this::getModificationInfos)
+                .map(ModificationInfos::toEntity)
                 .toList();
         List<ModificationEntity> newEntities = modificationRepository.saveAll(copyEntities);
 
@@ -334,16 +348,20 @@ public class NetworkModificationRepository {
     }
 
     @Transactional(readOnly = true)
-    public List<ModificationEntity> getModificationsEntities(@NonNull List<UUID> uuids) {
+    public List<ModificationInfos> getModificationsInfos(@NonNull List<UUID> uuids) {
         // Spring-data findAllById doc says: the order of elements in the result is not guaranteed
-        List<ModificationEntity> entities = modificationRepository.findAllById(uuids);
-        entities.sort(Comparator.comparing(e -> uuids.indexOf(e.getId())));
-        return entities;
+        Map<UUID, ModificationEntity> entities = modificationRepository.findAllById(uuids)
+            .stream()
+            .collect(Collectors.toMap(
+                ModificationEntity::getId,
+                Function.identity()
+            ));
+        return uuids.stream().map(entities::get).filter(Objects::nonNull).map(this::getModificationInfos).toList();
     }
 
     @Transactional(readOnly = true)
-    public List<ModificationEntity> copyModificationsEntities(@NonNull UUID groupUuid) {
-        return getModificationEntityStream(groupUuid).filter(m -> !m.getStashed()).map(ModificationEntity::copy).collect(Collectors.toList());
+    public List<ModificationInfos> getActiveModificationsInfos(@NonNull UUID groupUuid) {
+        return getModificationEntityStream(groupUuid).filter(m -> !m.getStashed()).map(this::getModificationInfos).toList();
     }
 
     @Transactional
